--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 				<input type="password" class="txt" ng-model="password" ng-change="checkPwdLen()" placeholder="密码">
 			</div>
 			<div class="formItem">
-				<button type="submit" class="btn" ng-class="{btn_pending:pending}">注册</buttom>
+				<button type="submit" class="btn" ng-class="{btn_pending:pending}">注册</button>
 			</div>
 		</form>
 		<div class="pre">
